--- a/Proyecto_Aerolinea.Web/Views/_ViewImports.cshtml
+++ b/Proyecto_Aerolinea.Web/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @using Proyecto_Aerolinea.Web.DTOs
+@using Proyecto_Aerolinea.Web.Core.Pagination
