--- a/Proyecto_Aerolinea.Web/Areas/Admin/Views/Shared/_Sidebar.cshtml
+++ b/Proyecto_Aerolinea.Web/Areas/Admin/Views/Shared/_Sidebar.cshtml
@@ -53,6 +53,7 @@
                     <li><a asp-area="Admin" asp-controller="Airports" asp-action="Index">Gestionar Aeropuertos</a></li>
                     <li><a asp-area="Admin" asp-controller="Aircrafts" asp-action="Index">Gestionar Aviones</a></li>
                     <li><a asp-area="Admin" asp-controller="Flights" asp-action="Index">Gestionar Vuelos</a></li>
+                    <li><a asp-area="default" asp-controller="Roles" asp-action="Index">Gestionar roles</a></li>
                 </ul>
             </div>
         </div>
